# hack-devopscode

./: .gitignore  README.md  bun.lockb  nx.json  package-lock.json  package.json
src/hack-llm-backend/: project.json  pyproject.toml  render.yaml
src/hack-llm-backend/utils/: chat.py
src/hack-web/: bun.lockb  package.json  project.json
src/hack-web/backend/: bun.lockb  package.json  project.json  tsconfig.json  vercel.json
src/hack-web/backend/api/: index.ts
src/hack-web/backend/api/components/: utils.ts
src/hack-web/backend/api/components/controllers/: auth.ts  post.ts  user.ts
src/hack-web/backend/api/components/models/: post.ts  user.ts
src/hack-web/backend/api/components/routes/: auth.ts  init.ts  post.ts  user.ts
src/hack-web/frontend/: .env.example  bun.lockb  project.json
src/hack-web/frontend/src/services/: codeService.ts
